# AdventOfCode2018

./: README.md
day1/: build.ninja  main.cpp
day2/: build.ninja  main.cpp  part2  part2.cpp
day3/: CMakeLists.txt
day3/src/: main.cpp
day4/: CMakeLists.txt
day4/src/: main.cpp
